@@ -96,6 +96,7 @@ CPAN::Changes = 0.23
 -phase = runtime
 -relationship = recommends
 Dist::Zilla::Plugin::MakeMaker = 0
+Dist::Zilla::Plugin::MakeMaker::Fallback = 0
 Dist::Zilla::Plugin::ModuleBuildTiny = 0.004
 Dist::Zilla::Plugin::GithubMeta = 0
 Dist::Zilla::Plugin::GitHub::Update = 0
